<resources>
    <string name="app_name">PL Manager</string>
    <string name="primaryPhoneNumber">Primary Phone #</string>
    <string name="primaryPhoneType">Primary Phone Type</string>
    <string name="secondaryPhoneNumber">Secondary Phone #</string>
    <string name="secondaryPhoneType">Secondary Phone Type</string>
    <string name="parent1PhoneNumber">Parent 1 Phone #</string>
    <string name="parent1PhoneType">Parent 1 Phone Type</string>
    <string name="parent2PhoneNumber">Parent 2 Phone #</string>
    <string name="parent2PhoneType">Parent 2 Phone Type</string>
    <string name="add_student">Add Student</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="select_student_type">Select student type</string>
    <string name="child">Child</string>
    <string name="adult">Adult</string>
    <string name="basic_info">Basic Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enrollment_type">Enrollment Type</string>
    <string name="persilat_kids">Persilat Kids</string>
    <string name="tap_for_list">Tap for list</string>
    <string name="rank">Rank</string>
    <string name="contact_info">Contact Info</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="no_mail">no.mail@none.com</string>
    <string name="parent_1">Parent 1</string>
    <string name="parent_1_first_name">Parent 1 First Name</string>
    <string name="parent_1_last_name">Parent 1 Last Name</string>
    <string name="parent_1_phone_number">Parent 1 Phone #</string>
    <string name="parent_1_phone_type">Parent 1 Phone Type</string>
    <string name="fake_phone_number">555-555-5555</string>
    <string name="parent_1_type">Parent 1 Type</string>
    <string name="parent_2">Parent 2</string>
    <string name="parent_2_first_name">Parent 2 First Name</string>
    <string name="parent_2_last_name">Parent 2 Last Name</string>
    <string name="parent_2_phone_number">Parent 2 Phone #</string>
    <string name="parent_2_phone_type">Parent 2 Phone Type</string>
    <string name="parent_2_type">Parent 2 Type</string>
    <string name="add_lesson">Add Lesson</string>
    <string name="student">Student</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="student_showed_up">Student Showed Up</string>
    <string name="make_up_lesson">Make Up Lesson</string>
    <string name="eligible_for_make_up">Eligible For Make Up</string>
    <string name="grade">Grade</string>
    <string name="notes">Notes</string>
    <string name="lesson_notes_go_here">Lesson notes go here…</string>
    <string name="menu">Menu</string>
    <string name="timecard">Timecard</string>
    <string name="students">Students</string>
    <string name="add_new">Add New</string>
    <string name="cell_phone_number">Cell Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="edit_your_info">Edit Your Info</string>
    <string name="add_new_instructor">Add New Instructor</string>
    <string name="view_student">View Student</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="current_timecard">Current Timecard</string>
    <string name="private_lesson_manager">Private Lesson Manager</string>
    <string name="edit_student">Edit Student</string>
    <string name="email_to_send_timecards_to">Email to send timecards to</string>
    <string name="title">Title</string>
    <string name="search_by_name">Search by Name</string>
    <string name="submit_timecard">Submit Timecard</string>
    <string name="options">Options</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="lessons">Lessons</string>
    <string name="no_show">No Show</string>
    <string name="not_eligible">Not Eligible</string>
</resources>
