<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:ignore="AlwaysShowAction">
    <item
        android:title="@string/edit"
        android:id="@+id/edit_menu_item"
        android:icon="@drawable/lead_pencil"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:title="@string/save"
        android:id="@+id/save_menu_item"
        android:icon="@drawable/floppy"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:title="@string/submit_timecard"
        android:id="@+id/delete_menu_item"
        android:icon="@drawable/delete"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:title="@string/cancel"
        android:id="@+id/cancel_menu_item"
        android:icon="@drawable/arrow_left_bold"
        android:visible="false"
        app:showAsAction="always"/>
    <!--<item-->
        <!--android:title="@string/submit_timecard"-->
        <!--android:id="@+id/submit_timecard_menu_item"-->
        <!--android:icon="@drawable/send"-->
        <!--app:showAsAction="ifRoom"/>-->
    <!--<item-->
        <!--android:title="@string/settings"-->
        <!--android:id="@+id/options_menu_item"-->
        <!--android:icon="@drawable/settings"-->
        <!--app:showAsAction="ifRoom"/>-->
</menu>