<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.silatsaktistudios.plmgr.LessonListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/primaryDark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/current_timecard"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:onClick="goBack"
            android:text="@string/back"
            android:textColor="@color/primaryBright"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColorHint="@color/primaryDark"
        android:textColor="@color/primaryDark"
        android:background="@color/primaryBright"
        android:gravity="center"
        android:inputType="textNoSuggestions"
        android:hint="@string/search_by_name"
        android:imeOptions="actionDone"
        android:id="@+id/lessonSearchEditText"/>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/timecardListView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/add_new"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/primaryBright"
        android:background="@color/primary"
        android:onClick="addNew"/>

</LinearLayout>
