<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.silatsaktistudios.plmgr.Fragments.LessonDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/pencil"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            android:background="@drawable/floppy"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/delete"/>
    </LinearLayout>


    <!--add/edit lesson-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lessonDetailAddEdit"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/student"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/lessonStudentNameTextView"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/gray_rounded_corners"
                android:gravity="center_vertical"
                android:hint="@string/tap_for_list"
                android:onClick="selectStudent"
                android:paddingLeft="5dp"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/date"
                android:textColor="#000000"/>


            <DatePicker
                android:id="@+id/lessonDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/gray_rounded_corners"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                tools:ignore="UnusedAttribute"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/time"
                android:textColor="#000000"/>

            <TimePicker
                android:id="@+id/lessonTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/gray_rounded_corners"
                android:timePickerMode="spinner"
                tools:ignore="UnusedAttribute"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/lessonShowedUpCheckBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="toggleShowedUp"
                    android:text="@string/student_showed_up"/>

                <CheckBox
                    android:id="@+id/lessonMakeUpCheckBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/make_up_lesson"/>

            </LinearLayout>


            <CheckBox
                android:id="@+id/lessonEligibleCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:text="@string/eligible_for_make_up"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/grade"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/lessonGradeTextView"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/gray_rounded_corners"
                android:gravity="center_vertical"
                android:hint="@string/tap_for_list"
                android:onClick="selectGrade"
                android:paddingLeft="5dp"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/notes"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/lessonNotesEditText"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/gray_rounded_corners"
                android:hint="@string/lesson_notes_go_here"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="17sp"/>

        </LinearLayout>

    </ScrollView>

    <!--view lesson-->
    <ScrollView
        android:id="@+id/lessonDetailView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Student Name:"/>

                <TextView
                    android:id="@+id/lessonViewStudentName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Luke Skywalker"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lesson Date:"/>

                <TextView
                    android:id="@+id/lessonViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="December 31, 1969"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lesson Time:"/>

                <TextView
                    android:id="@+id/lessonViewTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="12:00 pm"/>
            </LinearLayout>


            <CheckBox
                android:id="@+id/lessonViewShowedUpCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:text="@string/student_showed_up"/>

            <CheckBox
                android:id="@+id/lessonViewMakeUpCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/make_up_lesson"/>

            <CheckBox
                android:id="@+id/lessonViewEligibleCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/eligible_for_make_up"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Grade:"/>

                <TextView
                    android:id="@+id/lessonViewGrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="A+"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Notes:"/>

                <TextView
                    android:id="@+id/lessonViewNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Best lesson ever!"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
